Add intelligent actions system for Gmail automation
Implements a hybrid action system that allows users to execute actions
on web pages using natural language commands.

New Features:
- Gmail-specific actions (reply to emails, compose emails)
- Accessibility-first approach using ARIA attributes
- Intelligent intent parsing with pattern matching + LLM fallback
- Beautiful confirmation overlay with editable previews
- Hybrid architecture: specific providers + AI fallback

Technical Implementation:
- BaseAction framework for extensible action providers
- AccessibilityScanner for robust element discovery
- IntentParser for natural language command understanding
- ActionRegistry coordinating providers and actions
- Per-tab action system instances via content scripts

Gmail Actions (Working):
- "reply to this email" - generates AI-powered email responses
- "reply saying [message]" - custom reply instructions
- "compose email to [recipient] about [topic]" - draft new emails
- Context extraction from email content (sender, subject, body)

Fallback Provider (Partial):
- LLM-powered action planning for unknown sites
- Generic actions attempted on any website
- Needs further refinement for reliability

Safety Features:
- Level 2 safety: always confirms before executing
- Never auto-sends emails - only fills compose areas
- All generated content is editable before applying
- Clear success/error feedback

Architecture:
src/actions/
  ├── base/          # BaseAction class
  ├── core/          # Registry, scanner, intent parser
  ├── ui/            # Confirmation overlay
  └── providers/     # Gmail, Fallback providers

--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,19 @@
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["src/content/content.js"]
+    "js": [
+      "src/content/content.js",
+      "src/actions/base/BaseAction.js",
+      "src/actions/core/AccessibilityScanner.js",
+      "src/actions/core/IntentParser.js",
+      "src/actions/ui/ConfirmationOverlay.js",
+      "src/actions/providers/gmail/GmailProvider.js",
+      "src/actions/providers/gmail/actions/ReplyAction.js",
+      "src/actions/providers/gmail/actions/ComposeAction.js",
+      "src/actions/providers/fallback/FallbackProvider.js",
+      "src/actions/providers/fallback/actions/GenericAction.js",
+      "src/actions/core/ActionRegistry.js",
+      "src/actions/actions-loader.js"
+    ]
   }]
 }
