--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,8 @@
       "src/actions/providers/gmail/GmailProvider.js",
       "src/actions/providers/gmail/actions/ReplyAction.js",
       "src/actions/providers/gmail/actions/ComposeAction.js",
+      "src/actions/providers/googledocs/GoogleDocsProvider.js",
+      "src/actions/providers/googledocs/actions/WriteTextAction.js",
       "src/actions/providers/fallback/FallbackProvider.js",
       "src/actions/providers/fallback/actions/GenericAction.js",
       "src/actions/core/ActionRegistry.js",
