Add PDF and Google Workspace content extraction
Implements text extraction for PDF files and Google Workspace documents
(Docs, Sheets, Slides) to enable summarization of these document types.

PDF Support:
- Integrated PDF.js library for PDF parsing
- Created PDFExtractor class for text extraction
- Extracts text from all pages with metadata
- Works with direct PDF URLs and embedded PDFs

Google Workspace Support:
- Created GoogleWorkspaceExtractor for Docs/Sheets/Slides
- Google Docs: Extracts from DOCS_modelChunk internal data structure
- Google Sheets: Extracts visible cell content from grid container
- Google Slides: Extracts text from slides and speaker notes
- Handles canvas-based rendering by accessing internal data models

Technical Implementation:
- Added pdf.min.js and pdf.worker.min.js libraries
- Created pdf-extractor.js and google-workspace-extractor.js
- Updated content.js to route to appropriate extractors
- Updated manifest.json with new scripts and web accessible resources
- Enhanced plugin.js to handle PDF and Workspace responses

Documentation updated in README.md and CHANGELOG.md to reflect new
capabilities and technical approach.

--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,9 @@
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": [
+      "libs/pdf.min.js",
+      "src/content/pdf-extractor.js",
+      "src/content/google-workspace-extractor.js",
       "src/content/content.js",
       "src/actions/base/BaseAction.js",
       "src/actions/core/AccessibilityScanner.js",
@@ -45,5 +48,9 @@
       "src/actions/core/ActionRegistry.js",
       "src/actions/actions-loader.js"
     ]
+  }],
+  "web_accessible_resources": [{
+    "resources": ["libs/pdf.worker.min.js"],
+    "matches": ["<all_urls>"]
   }]
 }
