Add support for local-only model providers
Infrastructure changes to support proprietary/personal model providers
that won't be committed to git.

Changes:
- Added *.local.js pattern to .gitignore
- Updated models.config.js to support LOCAL_MODEL_PROVIDERS array
- Modified background-loader.js to load and register local providers
- Local providers fail gracefully if files don't exist

Usage:
1. Create a model file ending in .local.js (e.g., MyModel.local.js)
2. Add entry to LOCAL_MODEL_PROVIDERS array in models.config.js
3. File will be loaded but never committed to git

Example template created at: src/background/models/ProprietaryModel.local.js

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,11 @@ yarn-error.log*
 .env
 .env.local
 
+# Local-only files (proprietary/personal data)
+*.local.js
+*-local.js
+config.local.js
+
 # Logs
 logs/
 *.log
