Register Moveworks model provider (local-only)
Updated models.config.js to load MoveworksModel.local.js instead of
the template ProprietaryModel.local.js.

Added *.local.md pattern to gitignore for local documentation.

The actual Moveworks model implementation and setup guide are in
.local files that won't be committed to git:
- MoveworksModel.local.js (model implementation)
- MOVEWORKS_SETUP.local.md (setup instructions)

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,9 @@ yarn-error.log*
 
 # Local-only files (proprietary/personal data)
 *.local.js
+*.local.md
 *-local.js
+*-local.md
 config.local.js
 
 # Logs
