--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,15 @@
     "activeTab",
     "scripting",
     "storage",
-    "tabs"
+    "tabs",
+    "identity"
   ],
   "host_permissions": [
     "http://localhost:1234/*",
     "https://api.anthropic.com/*",
     "https://api.openai.com/*",
+    "https://api.moveworks.ai/*",
+    "https://*.okta.com/*",
     "<all_urls>"
   ],
   "background": { "service_worker": "src/background/background.js" },
