--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Browser Assistant",
-  "version": "0.0.1",
-  "description": "Summarize pages and chat with an AI (llama)",
+  "version": "0.0.2",
+  "description": "Summarize pages and chat with an AI",
   "permissions": [
     "sidePanel",
     "activeTab",
@@ -27,6 +27,11 @@
       "48": "icons/duck_48.png",
       "128": "icons/duck_128.png"
     }
+  },
+  "icons": {
+    "16": "icons/duck_16.png",
+      "48": "icons/duck_48.png",
+      "128": "icons/duck_128.png"
   },
   "side_panel": {
     "default_path": "plugin.html"
