Fix critical bugs and improve action system reliability
This commit addresses multiple issues reported with the quick actions feature
and enhances the fallback generic action system for better reliability.

## Critical Fixes

### 1. ConfirmationOverlay Not Closing
- **Issue**: Overlay remained visible after clicking Apply, Cancel, or X
- **Root Cause**: Over-complicated code with unnecessary guards
- **Fix**: Reverted to original simple git version
- **Files**: src/actions/ui/ConfirmationOverlay.js

### 2. Actions Not Showing on Page Load
- **Issue**: Quick action buttons missing until tab switch
- **Root Cause**: Content script and registry not initialized before access
- **Fix**: Added retry logic with exponential backoff in background.js
  and plugin.js, ensured await registry.initialize() in content.js
- **Files**:
  - src/background/background.js (retry logic for get_available_actions)
  - src/plugin/plugin.js (retry logic in updateQuickActions)
  - src/content/content.js (await initialization before action access)

### 3. Undefined Error Messages in Chat
- **Issue**: Literal "undefined" appearing in chat for action errors
- **Root Cause**: Property mismatch - looking for result.error but
  content.js sends result.message
- **Fix**: Updated plugin.js to use result.message consistently for both
  success and error cases
- **Files**: src/plugin/plugin.js (lines 633, 655, 759)

### 4. Google Docs Summarize Not Working
- **Issue**: Clicking "Summarize Document" gave undefined error
- **Root Cause**: GoogleDocsProvider.getContext() not extracting documentText
- **Fix**: Used GoogleWorkspaceExtractor to properly extract from
  window.DOCS_modelChunk (canvas-rendered content)
- **Files**: src/actions/providers/googledocs/GoogleDocsProvider.js

### 5. Chat System Not Working
- **Issue**: Chat submissions showed "waiting for response" indefinitely
- **Root Cause**: Removed pageText/pageSummary variables that were never filled
- **Fix**: Redesigned chat to use only conve

--- a/manifest.json
+++ b/manifest.json
@@ -50,10 +50,13 @@
       "src/actions/providers/gmail/GmailProvider.js",
       "src/actions/providers/gmail/actions/ReplyAction.js",
       "src/actions/providers/gmail/actions/ComposeAction.js",
+      "src/actions/providers/gmail/actions/SummarizeThreadAction.js",
       "src/actions/providers/googledocs/GoogleDocsProvider.js",
       "src/actions/providers/googledocs/actions/WriteTextAction.js",
+      "src/actions/providers/googledocs/actions/SummarizeAction.js",
       "src/actions/providers/fallback/FallbackProvider.js",
       "src/actions/providers/fallback/actions/GenericAction.js",
+      "src/actions/providers/fallback/actions/SummarizePageAction.js",
       "src/actions/core/ActionRegistry.js",
       "src/actions/actions-loader.js"
     ]
